name:                aoc2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/aoc2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-show
  default-language:    Haskell2010
  
executable day1
  hs-source-dirs:      day1
  main-is:             Main.hs
  other-modules:       Day1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
  default-language:    Haskell2010
  
executable day2
  hs-source-dirs:      day2
  main-is:             Main.hs
  other-modules:       Day2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
  default-language:    Haskell2010
  
executable day3
  hs-source-dirs:      day3
  main-is:             Main.hs
  other-modules:       Day3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
  default-language:    Haskell2010

executable day4
  hs-source-dirs:      day4
  main-is:             Main.hs
  other-modules:       Day4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
  default-language:    Haskell2010
  
executable day5
  hs-source-dirs:      day5
  main-is:             Main.hs
  other-modules:       Day5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
                     , vector
                     , mtl
  default-language:    Haskell2010
  
executable day6
  hs-source-dirs:      day6
  main-is:             Main.hs
  other-modules:       Day6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
                     , transformers
                     , vector
  default-language:    Haskell2010
  
executable day7
  hs-source-dirs:      day7
  main-is:             Main.hs
  other-modules:       Solver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , aoc2017
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010


-- test-suite aoc2017-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , aoc2017
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2017
